// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Deprecated Text size sm adds the small size class 1`] = `
<div
  className="Text fontSize100 defaultText alignStart breakWord fontWeightNormal"
/>
`;

exports[`Text error adds the error color class 1`] = `
<div
  className="Text fontSize300 errorText alignStart breakWord fontWeightNormal"
/>
`;

exports[`Text lineClamp should add a title when the children are text only 1`] = `
<div
  className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal lineClamp"
  style={
    Object {
      "WebkitLineClamp": 1,
    }
  }
  title="Shall I compare thee to a summer's day - William Shakespeare"
>
  Shall I compare thee to a summer's day - William Shakespeare
</div>
`;

exports[`Text lineClamp should not add a title when the children are objects 1`] = `
<div
  className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal lineClamp"
  style={
    Object {
      "WebkitLineClamp": 1,
    }
  }
>
  <div>
    Summer reading:
  </div>
  Shall I compare thee to a summer's day - William Shakespeare
</div>
`;

exports[`Text renders 1`] = `
<div
  className="Text fontSize300 defaultText alignStart breakWord fontWeightNormal"
/>
`;

exports[`Text size 100 adds the smallest size class 1`] = `
<div
  className="Text fontSize100 defaultText alignStart breakWord fontWeightNormal"
/>
`;

exports[`Text warning adds the warning color class 1`] = `
<div
  className="Text fontSize300 warningText alignStart breakWord fontWeightNormal"
/>
`;
